--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="fontsL.css">
+        <link rel="stylesheet" href="../FinalprogectHTMLCSS1/assets/css/style.css">
+        <link rel="stylesheet" href="../FinalprogectHTMLCSS1/fontsL.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap">
         <title>Loco</title>
     </head>
@@ -11,10 +11,8 @@
         <header class="header">
             <div class="container">
                 <div class="header__inner">
-                  <div class="icon"></div>
-                    <span class="icon-menu"></span>
-                  <div class="header__logo">LOCO</div>
-                  <div class="dropbtn">RU</div>
+                 <div class="header__logo">LOCO</div>
+                   <div class="dropbtn">RU</div>
                      <span class="checkmark">
                         <div class="checkmark_stem"></div>
                         <div class="checkmark_kick"></div>
@@ -23,7 +21,13 @@
                 <div class="menu">
                 </div> 
             </div>
-        </header>  
+            <div class="hamburger-menu">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                  <span></span>
+                </label> 
+            </div>             
+        </header> 
         <div class="mask"></div>   
         <div class="collection">
             <div class="container">
@@ -40,9 +44,10 @@
             </div>
         </div> 
         <div class="image">
-            <img class="image-imageInst" src="" alt="">
-            <img class="image-imageVK" src="" alt=""> 
-            <img class="image-imageFcb" src="" alt="">
-        </div>    
+            <img class="image-imageInst" src="../FinalprogectHTMLCSS1/assets/images/INST.svg" alt>
+            <img class="image-imageVK" src="../FinalprogectHTMLCSS1/assets/images/VK.svg" alt> 
+            <img class="image-imageFcb" src="../FinalprogectHTMLCSS1/assets/images/FB.svg" alt>
+        </div> 
+        <div class="scroll"></div>   
     </body>
 </html>
