--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../FinalprogectHTMLCSS1/assets/css/style.css">
-        <link rel="stylesheet" href="../FinalprogectHTMLCSS1/fontsL.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="fontsL.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap">
         <title>Loco</title>
     </head>
@@ -44,10 +44,11 @@
             </div>
         </div> 
         <div class="image">
-            <img class="image-imageInst" src="../FinalprogectHTMLCSS1/assets/images/INST.svg" alt>
-            <img class="image-imageVK" src="../FinalprogectHTMLCSS1/assets/images/VK.svg" alt> 
-            <img class="image-imageFcb" src="../FinalprogectHTMLCSS1/assets/images/FB.svg" alt>
+            <img class="image-imageInst" src="assets/images/INST.svg" alt>
+            <img class="image-imageVK" src="assets/images/VK.svg" alt> 
+            <img class="image-imageFcb" src="assets/images/FB.svg" alt>
         </div> 
-        <div class="scroll"></div>   
+        <div class="scroll"></div>
+        <div class="rec"></div>   
     </body>
 </html>
