--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="assets/css/style1.css">
-        <link rel="stylesheet" href="fontsL.css">
+        <link rel="stylesheet" href="assets/fontsLoco/fontsL.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap">
         <title>Loco</title>
     </head>
@@ -26,7 +26,6 @@
                     </div>
                 </div>  
             </div>
-                        
         </header> 
         <section class="collection">
             <div class="collection-container">
@@ -42,14 +41,14 @@
                 <div class="arrow-1">
                     <div></div>
                 </div>
-                <div class="image">
-                    <img class="image-imageInst" src="assets/images/INST.svg" alt>
-                    <img class="image-imageVK" src="assets/images/VK.svg" alt> 
-                    <img class="image-imageFcb" src="assets/images/FB.svg" alt>
-                </div> 
-                <div class="scroll"></div>
-                <div class="rec"></div>
             </div> 
+            <div class="image">
+                <img class="image-imageInst" src="assets/images/INST.svg" alt>
+                <img class="image-imageVK" src="assets/images/VK.svg" alt> 
+                <img class="image-imageFcb" src="assets/images/FB.svg" alt>
+            </div> 
+            <div class="scroll"></div>
+            <div class="rec"></div>
         </section>       
     </body>
 </html>
