--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
                     В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</h2>
                 <input type="button" class="inline" id="collection__button" value="Читать дальше">
                 <input type="button" class="inline" id="collection__button-text" value="Другие предложения">    
-            <!--<button class="collection__button" type="button" name="button">Другие предложения</button>   
-                    <button class="collection__button-text" type="button" name="button"></button>-->
                 <div class="arrow-1">
                     <div></div>
                 </div>
@@ -49,6 +47,23 @@
             </div> 
             <div class="scroll"></div>
             <div class="rec"></div>
-        </section>       
+        </section> 
+        <section class="pink"> <!---301-->
+            <div class="background-pink" >
+                <!--<div class="skincl">-->
+                    <div class="imagecl">
+                        <img clacc="imagecl-small" src="assets/images/small bg.svg" alt="smallpg">
+                       <!--<img class="pinkbg" src="assets/images/pink bg.svg" alt="pinkbg">
+                    </div>
+                    <h1 class="skincl">Кожаный клатч</h1>-->
+                    
+                    </div>
+            </div> <!---background-pink-->
+           <!--<div class="clatch">
+                <img clacc="small" src="assets/images/small bg.svg" alt="small">
+                <img class="pinkbg" src="assets/images/pink bg.svg" alt="pinkbg">
+            </div>-->
+        </section>      
     </body>
 </html>
+
