--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <section class="collection">
             <div class="collection-container">
                 <h1 class="collection__title">Новая коллекция</h1>
-                <h2 class="collection__subtitle">Бесплатная доставка включена.
+                <p class="collection__subtitle">Бесплатная доставка включена.
                     Предложение действует на сайте loco.com и в магазинах до 18.09.2018. 
                    Для получения скидки в магазинах предъявите скриншот данного предложения.
-                    В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</h2>
-                <input type="button" class="inline" id="collection__button" value="Читать дальше">
-                <input type="button" class="inline" id="collection__button-text" value="Другие предложения">    
+                    В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
+                <input type="button" class="inline" id="collection__button" value="Читать дальше"/>
+                <input type="button" class="inline" id="collection__button-text" value="Другие предложения"/>    
                 <div class="arrow-1">
                     <div></div>
                 </div>
@@ -50,19 +50,51 @@
         </section> 
         <section class="pink"> <!---301-->
             <div class="background-pink" >
-                <!--<div class="skincl">-->
-                    <div class="imagecl">
-                        <img clacc="imagecl-small" src="assets/images/small bg.svg" alt="smallpg">
-                       <!--<img class="pinkbg" src="assets/images/pink bg.svg" alt="pinkbg">
-                    </div>
-                    <h1 class="skincl">Кожаный клатч</h1>-->
-                    
-                    </div>
+                <div class="pink-container">
+                        <img class="imagecl-small" src="assets/images/small bg.svg" alt="smallpg">
+                        <img class="pinkbg" src="assets/images/pink bg.svg" alt="pinkbg1">
+                    <div class="skincl-container"> <!---333-->
+                        <h1 class="skincl1">Кожаный клатч</h1>
+                        <h2 class="skincl2">ОСЕННЯЯ КОЛЛЕКЦИЯ</h2>
+                        <p class="skincl3">Бесплатная доставка включена. Предложение действует на сайте loco.com
+                         и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот
+                          данного предложения. В магазинах предложение не суммируется с другими акциями,
+                           предложениями и распродажей.</p>
+                        <div class="price-container">      
+                            <input class="color" type="submit" id="color-gray" value=" ">
+                            <input class="color" type="submit" id="color-pink" value=" ">
+                            <input class="color" type="submit" id="color-violet" value=" ">
+                            <input class="color" type="submit" id="color-green" value=" ">
+                            <span class="price">1990₽</span>                            
+                        </div>
+                        <div class="input-number-container">
+                            <input type="button" class="btn-count" value="- 1 +">
+                            <input type="button" class="btn-basket" value="Добавить в корзину">
+                        </div>
+                            <input type="button" class="another" value="ДРУГИЕ ТОВАРЫ НА LOCO.COM">
+                            <img class="arrow-pink" src="assets/images/Vector 2.2.svg" alt="arrow-pink1">
+                    </div><!---skincl-container-->
+                </div><!---pink-container-->
             </div> <!---background-pink-->
-           <!--<div class="clatch">
-                <img clacc="small" src="assets/images/small bg.svg" alt="small">
-                <img class="pinkbg" src="assets/images/pink bg.svg" alt="pinkbg">
-            </div>-->
+        </section>
+        <section class="beige"> <!---493-->
+            <div class="beige-container">
+                <img class="img-backgr-rec" src="assets/images/Rectangle 10.svg">
+                <img class="img-backgr-beige" src="assets/images/photo-1516762689617-e1cffcef479d.svg">
+
+                <div class="serene-container"> <!---520-->
+                    <h1 class="serene1">Serene Total Look</h1>
+                    <h2 class="serene2">ОСЕННЯЯ КОЛЛЕКЦИЯ</h2>
+                    <p class="serene3">Джинсы, свитер, обувь.<br> 
+                В комплект также входит пакет ароматного чая и кружка.</p>
+                    <div class="input-serene-container">
+                        <input type="button" class="btn-serene-count" value="- 1 +">
+                        <input type="button" class="btn-serene-basket" value="Добавить в корзину">
+                    </div>
+                    <input type="button" class="another-serene" value="ДРУГИЕ ТОВАРЫ НА LOCO.COM">
+                    <img class="arrow-serene" src="assets/images/Vector 2.3.svg" alt="arrow-serene1">
+                </div> <!--serene-container-->    
+            </div> <!--beige-container-->
         </section>      
     </body>
 </html>
