--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header class="header">
             <div class="background-black"></div>
             <div class="container">
-                <div class="header__inner">
+                <div class="header__inner"> <!--37-->
                     <div class="header__logo">LOCO</div>
                     <div class="dropbtn">RU</div>
-                    <span class="checkmark">
+                    <span class="checkmark"> <!--60-->
                         <div class="checkmark_stem"></div>
                         <div class="checkmark_kick"></div>
                     </span>
