--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <div class="arrow-1">
                     <div></div>
                 </div>
+                <span class="checkmark375">
+                    <div class="checkmark_stem375"></div>
+                    <div class="checkmark_kick375"></div>
             </div> 
             <div class="image">
                 <img class="image-imageInst" src="assets/images/INST.svg" alt>
