CSS - Медиа запросы (media queries)

--- a/index.html
+++ b/index.html
@@ -9,96 +9,96 @@
         <title>Loco</title>
     </head>
     <body>
-        <header class="header">
-            <div class="background-black"></div>
+        <header class="header"> <!--22-->
             <div class="container">
-                <div class="header__inner"> <!--37-->
+                <div class="header__inner"> <!--35-->
                     <div class="header__logo">LOCO</div>
                     <div class="dropbtn">RU</div>
-                    <span class="checkmark"> <!--60-->
+                    <span class="checkmark"> <!--57-->
                         <div class="checkmark_stem"></div>
                         <div class="checkmark_kick"></div>
                     </span>
-                    <div class="hamburger-menu">
+                </div>    
+                <div class="hamburger-menu"> <!--90-->
                         <input id="menu__toggle" type="checkbox"/>
                         <label class="menu__btn" for="menu__toggle">
                             <span></span>
                         </label> 
-                    </div>
-                </div>  
+                </div>
             </div>
         </header> 
-        <section class="collection">
-            <div class="collection-container">
-                <h1 class="collection__title">Новая коллекция</h1>
-                <p class="collection__subtitle">Бесплатная доставка включена.
-                    Предложение действует на сайте loco.com и в магазинах до 18.09.2018. 
-                   Для получения скидки в магазинах предъявите скриншот данного предложения.
-                    В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
-                <input type="button" class="inline" id="collection__button" value="Читать дальше"/>
-                <input type="button" class="inline" id="collection__button-text" value="Другие предложения"/>    
-                <div class="arrow-1">
-                    <div></div>
-                </div>
-                <div class="check375">
-                    <div class="checkmark_stem375"></div>
-                </div>    
-            </div> 
-            <div class="image">
-                <img class="image-imageInst" src="assets/images/INST.svg" alt>
-                <img class="image-imageVK" src="assets/images/VK.svg" alt> 
-                <img class="image-imageFcb" src="assets/images/FB.svg" alt>
-            </div> 
-            <div class="scroll"></div>
-            <div class="rec"></div>
-        </section> 
-        <section class="pink"> <!---301-->
-            <div class="background-pink" >
-                <div class="pink-container">
-                        <img class="imagecl-small" src="assets/images/small bg.svg" alt="smallpg">
-                        <img class="pinkbg" src="assets/images/pink bg.svg" alt="pinkbg1">
-                    <div class="skincl-container"> <!---333-->
-                        <h1 class="skincl1">Кожаный клатч</h1>
-                        <h2 class="skincl2">ОСЕННЯЯ КОЛЛЕКЦИЯ</h2>
-                        <p class="skincl3">Бесплатная доставка включена. Предложение действует на сайте loco.com
-                         и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот
-                          данного предложения. В магазинах предложение не суммируется с другими акциями,
-                           предложениями и распродажей.</p>
-                        <div class="price-container">      
-                            <input class="color" type="submit" id="color-gray" value=" ">
-                            <input class="color" type="submit" id="color-pink" value=" ">
-                            <input class="color" type="submit" id="color-violet" value=" ">
-                            <input class="color" type="submit" id="color-green" value=" ">
-                            <span class="price">1990₽</span>                            
+        <section class="collection"> <!--127-->
+            <div class="container">
+               <div class="collection-container"> <!--139-->
+                    <h1 class="collection__title">Новая коллекция</h1>
+                    <p class="collection__subtitle">Бесплатная доставка включена.
+                        Предложение действует на сайте loco.com и в магазинах до 18.09.2018. 
+                    Для получения скидки в магазинах предъявите скриншот данного предложения.
+                        В магазинах предложение не суммируется с другими акциями, предложениями и распродажей.</p>
+                    <div class="btn-container"> <!--176-->
+                        <input class="collection__button" value="Читать дальше"/>
+                        <input class="collection__button-text" value="Другие предложения"/>
+                        <div class="arrow-1"> <!--217-->
+                            <div></div>
                         </div>
-                        <div class="input-number-container">
-                            <input type="button" class="btn-count" value="- 1 +">
-                            <input type="button" class="btn-basket" value="Добавить в корзину">
+                        <div class="checkformedia">
+                            <div class="checkmark_formedia"></div>
                         </div>
-                            <input type="button" class="another" value="ДРУГИЕ ТОВАРЫ НА LOCO.COM">
-                            <img class="arrow-pink" src="assets/images/Vector 2.2.svg" alt="arrow-pink1">
-                    </div><!---skincl-container-->
-                </div><!---pink-container-->
-            </div> <!---background-pink-->
+                    </div>
+                    <div class="image"> <!--266-->
+                        <img class="image-imageInst" src="assets/images/INST.svg" alt>
+                        <img class="image-imageVK" src="assets/images/VK.svg" alt> 
+                        <img class="image-imageFcb" src="assets/images/FB.svg" alt>
+                    </div> 
+                    <div class="scrollrec"> <!--289-->
+                        <div class="scroll"></div>
+                        <div class="rec"></div>
+                    </div>    
+                </div> <!---collection-container-->
+            </div> <!---container-->
         </section>
-        <section class="beige"> <!---493-->
+        <section class="pink"> <!---318-->
+            <div class="pink-container">
+                <div class="skincl-container"> <!---338-->
+                    <h1 class="skincl1">Кожаный клатч</h1>
+                    <h2 class="skincl2">ОСЕННЯЯ КОЛЛЕКЦИЯ</h2>
+                    <p class="skincl3">Бесплатная доставка включена. Предложение действует на сайте loco.com
+                        и в магазинах до 18.09.2018. Для получения скидки в магазинах предъявите скриншот
+                        данного предложения. В магазинах предложение не суммируется с другими акциями,
+                        предложениями и распродажей.</p>
+                    <div class="price-container"> <!--384-->     
+                        <input class="color" type="submit" id="color-gray" value=" ">
+                        <input class="color" type="submit" id="color-pink" value=" ">
+                        <input class="color" type="submit" id="color-violet" value=" ">
+                        <input class="color" type="submit" id="color-green" value=" ">
+                        <span class="price">1990₽</span>                            
+                    </div>
+                    <div class="input-number-container"> <!--448-->
+                        <input type="button" class="btn-count" value="- 1 +">
+                        <input type="button" class="btn-basket" value="Добавить в корзину">
+                    </div>
+                        <input type="button" class="another" value="ДРУГИЕ ТОВАРЫ НА LOCO.COM">
+                        <img class="arrow-pink" src="assets/images/Vector 2.2.svg" alt="arrow-pink1">
+                </div>  <!---skincl-container-->
+            </div> <!---pink-container-->
+        </section>
+        <section class="beige"> <!---496-->
             <div class="beige-container">
                 <img class="img-backgr-rec" src="assets/images/Rectangle 10.svg">
                 <img class="img-backgr-beige" src="assets/images/photo-1516762689617-e1cffcef479d.svg">
-
-                <div class="serene-container"> <!---520-->
+                <div class="serene-container"> <!---523-->
                     <h1 class="serene1">Serene Total Look</h1>
                     <h2 class="serene2">ОСЕННЯЯ КОЛЛЕКЦИЯ</h2>
                     <p class="serene3">Джинсы, свитер, обувь.<br> 
-                В комплект также входит пакет ароматного чая и кружка.</p>
-                    <div class="input-serene-container">
+                    В комплект также входит пакет ароматного чая и кружка.</p>
+                    <div class="input-serene-container"> <!---562-->
                         <input type="button" class="btn-serene-count" value="- 1 +">
                         <input type="button" class="btn-serene-basket" value="Добавить в корзину">
                     </div>
                     <input type="button" class="another-serene" value="ДРУГИЕ ТОВАРЫ НА LOCO.COM">
                     <img class="arrow-serene" src="assets/images/Vector 2.3.svg" alt="arrow-serene1">
-                </div> <!--serene-container-->    
-            </div> <!--beige-container-->
+                </div> <!--serene-container-->  
+           </div> <!--beige-container-->
         </section>      
     </body>
 </html>
